# eddn-scanner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.py  main.py  pyproject.toml  scan.py  server.py
.github/workflows/: ci.yaml
migrations/: 20250806_01_create_commodity.sql  20250807_01_create_system.sql  20250807_02_create_market.sql  20250807_03_create_commodity.sql  20250807_04_v_sys_dist.sql  20250807_05_station_type.sql  20250807_06_docking_access.sql  20250828_01_power.sql  20250828_01_sys_power.sql  20250829_01_sys_power_state.sql  20250831_01_v_market_dist.sql  20250831_02_v_profit.sql  20250901_01_sys_power_state_allow_null_power.sql  20250906_01_system_pos_idx.sql  20250906_02_nearby_systems.sql  20250906_03_idx_market_sys.sql  20250906_04_idx_commodity_name.sql  20250906_05_idx_commodity_supply.sql  20250906_06_idx_commodity_demand.sql  20250906_07_idx_market_last_update.sql  20250906_08_v_profit_v2.sql  20250906_09_idx_commodity_v2.sql
scanner/: scanner.py  scanner2.py
scanner/api/: model.py
scanner/command/: add_commodity.py  command_factory.py  get_system.py  list_market_commodities.py  list_markets.py  list_systems.py  list_trades.py  update_commodities.py  update_market.py  update_powers.py  update_system.py
scanner/controller/: commodity_controller.py  handler.py  power_controller.py
scanner/dto/: market.py  system.py  trade.py
scanner/entity/: commodity.py  market.py  power.py  system.py  (+1 more)
schema/: carrier.json  minerva.json
sql/: 3.sql  4.sql  5.sql  q1.sql  q2.sql
tests/: conftest.py  facade.py
(+31 files in other folders)
